src/test/deca/syntax/valid/parser/extension/TAB_dim_expr_deriv.deca
{
    int[][] x = new int[1][5*9][40%2][1][1][1][1];
    int[][][][] x = new float[1];
}