src/test/deca/syntax/invalid/parser/oracle/field_ident.deca
class A { int é = 1;}